--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,116 @@
+
 *{
-	margin:0px;
-	padding:0px;
+	margin: 0;
+	padding: 0;	
 }
-header{
-	position:fixed;
-	height:700px;
-	background-image: url("image/safe.jpg") ; 
-	width: 1370px;
-	background-size:cover;
-	margin-top:100px;
-	background-position:center;
+ body{
+ 	font-family: 'Satisfy', cursive;
 }
-.bgimage{
-	background-size: cover ;
-	height: 100vh ;
-	width: 1350px;
-	background-repeat: no-repeat;
-	background-position: center  ;
+.container{
+	width: 100%;
+	height: 100vh;
+	background: url(image/safe.jpg) center no-repeat;
+	background-size: cover;
 }
-.header:hover {
-	background-size: 100% ;
+/*style of navbar */
+/*position is fixed to the right */
+.navbar{
+	width: 300px;
+	height: 100%;
+	background-color: #262626;
+	position: fixed;
+	top: 0;
+/* hides the navbar */
+	right: -300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 20% 0 0 60%;
+	transition: right .8s cubic-bezier(1, 0, 0, 1);
 }
-body{
-	background-color: #eee;
-}
-.wrapper{
-	margin: 0 auto 0 60px;
-	width:1000px;
+/*hamburger menu styles */
+.hamburger-menu {
+	width: 35px;
+	height: 30px;
+	position: fixed;
+	top: 50px; 
+	right: 50px;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
-nav{
-	width:100%;
-	height: 100px;
-	background-color: #000;
+/* Shows the navbar */
+.change {
+	right: 0;
 }
-
-ul li{
+/* Each 3 lines ---- */
+.line {
+	width: 100%;
+	height: 3px;
+	background-color: #fff;
+	box-shadow: 0 0 10px #fff,
+	             0 0 20px #fff,
+	             0 0 40px #fff,
+	             0 0 80px #fff,
+	             0 0 120px #fff,
+	             0 0 160px #fff;
+	transition: all 0.8s;
+}
+/* X icon for .hamburger-menu */
+.change .line-1 {
+	transform: rotateZ(-405deg) translate(-8px, 6px);
+}
+.change .line-2 {
+	opacity: 0;
+}
+.change .line-3 {
+    transform: rotateZ(405deg) translate(-8px, -6px);
+}
+.nav-list {
+	text-align: right;
+}
+.nav-item {
 	list-style: none;
-	display: inline-block;
-	float: left;
-	line-height: 100px;
+	margin: 25px;
 }
-
-ul li a {
-	display: block;
-	font-family:'Satisfy', cursive ;
-    list-style: none;
-    font-size: 15px;
-    color: #fff;
+ /* individual navigation links */
+ .nav-link {
     text-decoration: none;
-    padding: 0 20px;
-}
-
-ul li a:hover{
-	color: orange;
-}
-.title{
-	position: absolute;
-	top:50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
-
- h2{
- 	font-size: 22px;
- 	font-family: 'Yellowtail', cursive;
- 	margin-left:14px 0px;
-    font-weight:100;
-    text-align: center;
+    font-size: 22px;
+    color: #eee;
+    font-weight: 300;
+    letter-spacing: 1px;
     text-transform: uppercase;
-    color: #fff;
-    word-spacing: 10px;
-    line-height: 40px;
-   
- }
-
-a{
-	text-decoration: none;
+    position: relative;
+    padding: 3px 0;
+}	
+.nav-link::before, .nav-link::after {
+	content:"";
+	width: 100%;
+	height: 2px;
+	background-color: white;
+	box-shadow:  0 0 5px #009D99,
+	             0 0 25px #009D99,
+	             0 0 50px #009D99,
+	             0 0 100PX #009D99;
+	position: absolute;
+	left: 0;
+	transform: scaleX(0);
+	transition: transform 0.5s;
 }
+.nav-link::before {
+	bottom: 0; 
+	transform-origin: right;
+}
+.nav-link::after {
+	top: 0;
+	transform-origin: left;
+}
+
+.nav-link:hover::before,
+.nav-link:hover::after {
+	transform:scalex(1);
+}
+
