modified webpages and new image added

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,18 @@
-
 *{
 	margin: 0;
 	padding: 0;	
 }
-html{
-	scroll-behavior: smooth;
-}
  body{
  	font-family: 'slabo 27px', serif;
- 	background: url(image/stars.jpg) center no-repeat;
- 	background-size: cover;
+ 	background: url(image/landscape.jpg) center no-repeat;
+ 	height: 100vh;
 }
 .wrapper{
      margin: auto;
 }
 .container{
 	width: 100%;
-	height: 100vh;
-	box-sizing: border-box;
 	background-size: cover;
-	opacity: 0.9;
 }
 /*style of navbar */
 /*position is fixed to the right */
@@ -31,7 +24,7 @@ html{
 	top: 0;
 /* hides the navbar */
 	right: -300px;
-	display: flex;
+	display: flex ;
 	justify-content: center;
 	align-items: center;
 	transition: right .8s cubic-bezier(1, 0, 0, 1);
@@ -46,8 +39,8 @@ html{
 	position: fixed;
 	top: 50px; 
 	right: 50px;
+	display: flex ;
 	cursor: pointer;
-	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 }
@@ -166,15 +159,17 @@ html{
 }
 @media (max-width:800px){
 	.container{
-		margin-bottom: 100px;
+		position: fixed;
 	}
 	.welcome-text{
-		left: -45%;
+		left: -50%;
 		top: 30%;
+
 	}
     .navbar{
-    	width: 150px;
+    	width: 180px;
     }
+}
 /*home section ends */
 
 
@@ -195,7 +190,7 @@ html{
 .contact .content h2{
 	font-size: 36px;
 	font-weight: 500;
-	color: #fff;
+	color: #9fa8a3;
 }
 .container-c{
     width: 100%;
@@ -235,12 +230,13 @@ html{
 }
 .container-c .contactInfo .box-x .text h3{
 	font-weight: 500;
-	color: #00bcd4;
+	color: #3fb0ac;
 }
 .contact-form{
 	width: 40%;
 	padding: 40px;
 	background: #fff;
+	opacity: .8;
 }
 .contact-form h2{
 	font-size: 30px;
@@ -277,13 +273,13 @@ html{
 .contact-form .inputbox input:valid ~ span,
 .contact-form .inputbox textarea:focus ~ span,
 .contact-form .inputbox textarea:valid ~ span{
-	color: #e91e63;
+	color: #3fb0ac;
 	font-size: 12px;
 	transform: translateY(-20px);
 }
 .contact-form .inputbox input[type="submit"]{
 	width: 100px;
-	background: #00bcd4;
+	background: #3fb0ac;
 	color: #fff;
 	border: none;
 	cursor: pointer;
@@ -309,14 +305,32 @@ html{
 /* contact page end */
 
 /* portfolio page start */
-
+}
+.main{
+	position: relative;
+	height: 8vh;
+	width: 100%;
+}
+.main h1{
+	position: relative;
+	height: auto;
+	width: 500px;
+	left: 50%;
+	transform: translateX(-50%);
+	margin:5% 0 2% 0;
+	text-align: center;
+	font-size: 1.8cm;
+	font-weight: 400;
+	letter-spacing: 1.5px;
+	color: #9fa8a3;
+	background: rgba(0, 0, 0, 0.05);
 }
 .image-grid {
 	display: flex;
 	width: 90%;
 	margin: 0 auto;
 	flex-wrap: wrap;
-	margin-top: 17%;
+	margin-top: 10%;
 	align-items: center;
 	justify-content: center;g
 }
@@ -365,12 +379,6 @@ h2{
     font-weight: 400;
     display: inline-block;
 }
-h3{
-	margin: 0;
-	font-weight: 400;
-	text-decoration: underline;
-	display: inline-block;
-}
 .box{
     background: #fff;
     width: 50rem;
@@ -385,7 +393,6 @@ h3{
 }
 .header-left {
     display: grid;
-    justify-items: center;
     align-items: center;
     font-size: 2rem;
 }
@@ -411,7 +418,7 @@ h3{
     margin-right: 0.5rem;
 }
 .grey{
-    background: rgba(133, 133, 133);
+    background:#173e43;
     color:#fff;
     padding: 0.5rem;
     border-radius: 0.3rem;
@@ -431,6 +438,9 @@ th {
 #course-name{
 	font-weight: bold;
 }
+#known-name{
+	font-weight: bold;
+}
 .Declaration{
 	margin: 1rem 0;
 }
@@ -443,15 +453,18 @@ th {
 		padding: 0.1rem;
 	}
 	.first-name{
-		font-size: 40px;
+		font-size: 30px;
 	}
 	.last-name {
-		font-size: 35px;
+		font-size: 27px;
 	}
 	.box{
 		margin-top: 100px;
 		padding: 2rem;
 		height: 850px;
+	}
+	.header-right{
+		font-size: 11px;
 	}
 }
 /* cv page end */
