--- a/styles.css
+++ b/styles.css
@@ -345,12 +345,12 @@
 @media only screen and (min-width: 640px) {
 	.grid-image {
 		flex-basis: 50%;
-	}
+	}	
 }
 @media only screen and (min-width: 960px) {
 	.grid-image {
 		flex-basis: 33.333%;
-	}
+	}	
 }
 
 @media only screen and (min-width: 1280px) {
@@ -417,7 +417,7 @@ h2{
     font-size:1.5rem;
     margin-right: 0.5rem;
 }
-.grey{
+.blue{
     background:#173e43;
     color:#fff;
     padding: 0.5rem;
