--- a/styles.css
+++ b/styles.css
@@ -327,12 +327,12 @@
 }
 .image-grid {
 	display: flex;
-	width: 90%;
+	width: 60%;
 	margin: 0 auto;
 	flex-wrap: wrap;
 	margin-top: 10%;
 	align-items: center;
-	justify-content: center;g
+	justify-content: center;
 }
 
 .grid-image {
@@ -468,4 +468,66 @@ th {
 	}
 }
 /* cv page end */
-
+/* report starts */
+h1{
+    margin: 0;
+    font-weight: 300;
+}
+h2{
+    margin: 0;
+    font-weight: 400;
+    display: inline-block;
+}
+.box-r{
+    background: #fff;
+    width: 50rem;
+    padding: 3rem;
+    margin: 1rem auto;
+    border-radius: 0.5rem;
+    background: rgb(240, 239, 239);
+}
+.header-r{
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+.img-index{
+	width: 600px;
+}
+.img-cv{
+	width: 600px;
+}
+.img-portfolio{
+	width: 600px;
+}
+.img-call{
+	width: 600px;
+}
+.img-prob{
+	width: 600px;
+}
+@media (max-width:760px){
+	.box-r{
+		width: 15rem;
+	}
+	.box-r{
+		margin-top: 100px;
+		padding: 2rem;
+		height: 850px;
+	}
+	.img-index{
+	    width: 250px;
+    }
+    .img-cv{
+	    width: 250px;
+    }
+    .img-portfolio{
+	    width: 250px;
+    }
+    .img-call{
+	    width: 250px;
+    }
+    .img-prob{
+	    width: 250px;
+    }
+}
+/* report ends */
